<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalkActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/walk_step_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/default_step"
            android:textSize="100sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/walk_step_counter"
            android:layout_toEndOf="@id/walk_step_counter"
            android:text="@string/steps"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/walk_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/walk_step_counter"
            android:layout_centerHorizontal="true"
            android:text="@string/default_step"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/walk_distance"
            android:layout_marginTop="30sp"
            android:layout_toEndOf="@id/walk_distance"
            android:text="@string/distance"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/walk_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/walk_distance"
            android:layout_alignParentStart="true"
            android:layout_marginStart="123dp"
            android:layout_marginTop="10dp"
            android:text="@string/default_time"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/walk_time"
            android:layout_marginTop="20sp"
            android:layout_toEndOf="@id/walk_time"
            android:text="@string/time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/walk_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/walk_time"
            android:text="@string/default_speed"
            android:textSize="40sp"
            android:layout_marginStart="176dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/walk_speed"
            android:layout_marginTop="20sp"
            android:layout_toEndOf="@id/walk_speed"
            android:text="@string/speed_unit"
            android:textSize="20sp" />

        <Button
            android:id="@+id/end_walk"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_red_round"
            android:text="@string/end_walk"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_below="@+id/walk_speed"
            android:layout_marginTop="20dp"
            android:maxHeight="30dp"
            app:srcCompat="@drawable/walk_image" />

        <Button
            android:id="@+id/mock_in_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/end_walk"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="163dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="157dp"
            android:text="@string/mock_step" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>