<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_steps_margin_top"
            android:text="@string/main_step_default"
            android:textSize="@dimen/text_steps_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/button_change_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/btn_changeGoal_margin_start"
                android:layout_marginTop="@dimen/btn_changeGoal_margin_top"
                android:background="@android:color/transparent"
                android:onClick="enterNewGoal"
                android:text="@string/goal_button"
                android:textColor="#999999"
                android:textSize="@dimen/btn_changeGoal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_goal_margin_start"
                android:layout_marginTop="@dimen/text_goal_margin_top"
                android:text="@string/default_goal"
                android:textSize="@dimen/text_goal_size"
                app:layout_constraintStart_toEndOf="@id/button_change_goal"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>


        <Button
            android:id="@+id/button_start_walk"
            android:layout_width="@dimen/btn_startWalk_width"
            android:layout_height="@dimen/btn_startWalk_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/btn_startWalk_margin_top"
            android:background="@drawable/button_bg_round"
            android:text="@string/start_walk_button"
            android:textColor="#333399"
            android:textSize="@dimen/btn_startWalk_text_size" />
        <Button
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_button"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/button_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/stats" />


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/button_mock500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/mock_step"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_stop_mock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/button_mock500"
                app:layout_constraintBottom_toBottomOf="@id/button_mock500"
                android:text="@string/stop_mock"/>

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                app:layout_constraintStart_toEndOf="@id/button_stop_mock"
                app:layout_constraintBottom_toBottomOf="@id/button_mock500" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                app:layout_constraintStart_toEndOf="@id/button_plus"
                app:layout_constraintBottom_toBottomOf="@id/button_plus" />


        </android.support.constraint.ConstraintLayout>

        <EditText
            android:id="@+id/mock_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>