<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_height="77dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:text="Display email"
        android:textSize="20sp" />

    <Button
        android:id="@+id/friend_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_friend_request"
        android:layout_below="@id/profile_email"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/decline_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline_btn_text"
        android:layout_below="@id/friend_request_btn"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/friend_history_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/decline_btn"
        android:text="@string/view_friend_history"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:background="@color/design_default_color_primary"
        android:textColor="#ffffff"
        android:visibility="gone" />
</RelativeLayout>